--- a/base/base.css
+++ b/base/base.css
@@ -77,7 +77,14 @@
             "media"
             "meta";
         }
+        .work.layout-right .inner {
+        grid-template-columns: 1fr;
+          grid-template-areas:
+            "media"
+            "meta";
+        }
       }
+     
 
       /* 照片组：同一行展示多张 */
       .photo-group {
